Fix issue with tooltip
Have set the overflows in the text editor to visible so that the
hyperlink tooltip is fully visible when clicked.

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -70,15 +70,17 @@ article {
   border: 1px solid $grey;
   height: 30rem !important;
   width: 100%;
-  overflow-y: hidden !important;
-  border: 1px solid $grey;
+  overflow: visible !important;
   resize: both;
 }
 
 #editor-container {
   .ql-editor {
-    overflow: scroll !important;
     height: 30rem !important;
+    width: 100% !important;
+    overflow-x: scroll !important;
+    overflow-y: scroll !important;
+    resize: both;
   }
 }
 
